# AIAnalyticalToolV2

./: README.md  ai_payload.json  ai_response.json  auth_payload.json  dashboard_response.json  login_response.json  reports_response.json
AIBackend/: pyproject.toml  requirements.txt  run_local.py
AIBackend/app/: __init__.py  main.py
AIBackend/app/api/v1/: routes_analyze_results.py  routes_explain_sql.py  routes_generate_sql.py
AIBackend/app/core/: config.py  logging_config.py  ollama_client.py
AIBackend/app/models/: schemas.py
AIBackend/app/services/: analysis_service.py  explanation_service.py  sql_generation_service.py  sql_generation_service.txt
AIBackend/tests/: test_analyze_results.py  test_explain_sql.py  test_generate_sql.py
CoreBackend/: package-lock.json  package.json  tsconfig.json
CoreBackend/src/: app.ts  index.ts
CoreBackend/src/config/: env.ts
CoreBackend/src/db/: analyticsDb.ts  masterDb.ts  ragDb.ts
CoreBackend/src/middleware/: authRequired.ts  errorHandler.ts  rateLimiter.ts  requireRole.ts
CoreBackend/src/routes/: admin.routes.ts  auth.routes.ts  dashboard.routes.ts  internalJobs.route.ts  jobs.routes.ts  reports.routes.ts
CoreBackend/src/services/: auth.service.ts  dashboard.service.ts  (+6 more)
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: apiClient.ts  auth.ts  dashboardLayout.ts  downloadUtils.ts  types.ts
frontend/styles/: globals.css
worker/: package-lock.json  package.json  tsconfig.json
worker/src/: worker.ts
(+32 files in other folders)
